--- a/app/globals.css
+++ b/app/globals.css
@@ -84,7 +84,7 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-
+/*
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
@@ -93,6 +93,10 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+}
+*/
+body {
+  background-color: #8A5093; /* Remplacez #ffffff par la couleur de fond de votre choix */
 }
 
 a {
